2001-07-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/mml2015.el: Require `gnus-clfns' when compiling.
	* lisp/gnus-clfns.el (string-to-list): New compiler macro.

2001-07-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-sum.el (gnus-select-newsgroup): Don't examine cached
	articles with `gnus-cache-articles-in-group' even if the current
	group is not a virtual group (see ChangeLog.1 1999-03-02).

2001-07-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 05.

	* lisp/nnmh.el (nnmh-retrieve-parsed-headers): Abolished.

	* lisp/gnus-sum.el (gnus-get-newsgroup-headers-xover): Don't use
	`gnus-retrieve-parsed-headers'.
	(gnus-fetch-headers): Ditto.

	* lisp/gnus-int.el (gnus-retrieve-parsed-headers): Abolished.

	* lisp/gnus-cache.el (gnus-cache-braid-headers): Abolished.
	(gnus-cache-retrieve-parsed-headers): Abolished.

2001-07-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/nnshimbun.el (nnshimbun-request-expire-articles): Bind
	`nnmail-expiry-wait-function' to nil if the group's parameter
	`expiry-wait' is specified by the user or the shimbun's default
	value is provided.

2001-07-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-msg.el (gnus-message-make-user-agent): New
	implementation.

2001-07-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-clfns.el (copy-list): New compiler macro.

2001-07-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-delay.el (gnus-delay-initialize): Don't use the macro
	`kbd'.

	* lisp/nnheader.el (mm-read-coding-system): New function which is
	a substitute for mm-util.el.

2001-07-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 04.

	* lisp/nntp.el (nntp-request-newgroups): Use UTC date for
	NEWGROUPS command.

	* lisp/gnus-start.el (gnus-find-new-newsgroups): Use
	`message-make-date' instead of `current-time-string'.
	(gnus-ask-server-for-new-groups): Ditto.
	(gnus-check-first-time-used): Ditto.
